# Gridcoin-Research

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  OverviewView.qml  README.md  build_targets.sh  configure.ac  install_dependencies.sh
.github/workflows/: cmake-ci.yml  cmake-ci.yml.disabled  cmake_compatibility.yml  cmake_distros.yml  cmake_production.yml  cmake_quality.yml
build-aux/cmake/: CheckARMSHANI.cmake  CheckAVX2.cmake  CheckSHANI.cmake  CheckSSE41.cmake
build-aux/cpack/: CPackOptions.cmake.in  NSIS.template.in
ci/: README.md
ci/lint/: 05_before_script.sh  06_script.sh
ci/test/: 00_setup_env_mac_arm64_cross.sh  06_script_a.sh  wrap-qemu.sh
clinerules/: 00-project-context.md  01-coding.md  02-architecture-overview.md  03-core-concepts-glossary.md  04-component-guide.md  05-common-tasks.md  06-quality-control-checklist.md
contrib/: default.nix  poll_notify.sh
contrib/api-proxy/: README.md  server.py
contrib/devtools/: circular-dependencies.py  postprocess-translations.py  run-local-ci.sh  split-logs.py  test_deterministic_coverage.sh  update-translations.sh
contrib/docker/: .dockerignore  .env.example  Dockerfile.gui  Dockerfile.headless  README.md  docker-compose.gui.yml  docker-compose.yml  entrypoint.sh  healthcheck.sh
contrib/flatpak/: build-flatpak.sh  us.gridcoin.GridcoinResearch.metainfo.xml.in  us.gridcoin.GridcoinResearch.yml
contrib/macdeploy/: README.md  entitlements.plist  macdeployqtplus  notarize-dmg.sh
depends/: Makefile  README.md  funcs.mk  toolchain.cmake.in
depends/builders/: default.mk
depends/hosts/: darwin.mk  (+2 more)
doc/: automated_greylisting_design_highlights.md  build-dependencies.md  build-freebsd.md  build-macos.md  build-msys2.md  build-openbsd.md  build-windows-wsl.md  build.md  ci_cd.md  cmake-options.md  consensus.md  developer-notes.md  release-process.md  staking-kernel-paper-outline.md  transaction-types.md  translation_process.md
share/: setup.nsi.in
src/: CMakeLists.txt  Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  alert.h  base58.h  bignum.h  chainparams.cpp  chainparams.h  clientversion.cpp  dbwrapper.cpp  dbwrapper.h  fs.cpp  fs.h  gridcoinresearchd.cpp  htlc.cpp  htlc.h  init.cpp  key.h  keystore.cpp  main.cpp  main.h  miner.cpp  net.cpp  net.h  noui.cpp  pubkey.cpp  rpcmining.cpp  script.cpp  script.h  scrypt-x86.S  scrypt-x86_64.S  scrypt.cpp  sync.cpp  sync.h  util.cpp  util.h  validation.cpp  validation.h  (+1 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  consolidateunspentwizardselectinputspage.cpp  cppqmlmessagebridge.cpp  cppqmlmessagebridge.h  diagnosticsdialog.h  editaddressdialog.cpp  editaddressdialog.h  guiutil.cpp  initializationmodel.cpp  initializationmodel.h  intro.cpp  macdockiconhandler.mm  mrcmodel.cpp  notificator.cpp  notificator.h  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  peertablemodel.cpp  qrcodedialog.cpp  rpcconsole.cpp  sendcoinscontroller.cpp  sendcoinscontroller.h  sendcoinsdialog.cpp  (+17 more)
src/qt/forms/: addressbookpage.ui  overviewpage.ui  researcherwizard.ui  researcherwizardbeaconpage.ui  researcherwizardmodedetailpage.ui  researcherwizardmodepage.ui  researcherwizardnoncruncherpage.ui  researcherwizardownershipproofpage.ui  sendcoinsentry.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_ky.ts  bitcoin_la.ts  bitcoin_lt.ts  (+22 more)
src/qt/qml/: AboutWindow.qml  Circle.qml  ClickableLink.qml  ColorizableImage.qml  DatePicker.qml  DebugConsoleWindow.qml  FavoritesView.qml  HelpHover.qml  HistoryView.qml  InfoPopup.qml  MainWindow.qml  MenuButton.qml  OnboardingButton.qml  OnboardingPageIndicator.qml  OnboardingWindow.qml  OverviewResearcherView.qml  OverviewView.qml  PanelTitle.qml  PollCreationWindow.qml  PollDetailsWindow.qml  PollTabButton.qml  PollView.qml  PollVoteWindow.qml  QRCodeWindow.qml  ReceiveView.qml  RecentPollPanel.qml  RecentTransactionItem.qml  SearchBox.qml  SendView.qml  SettingsView.qml  SplashScreen.qml  StatusFooter.qml  TabMenu.qml  TableFooter.qml  TableHeader.qml  UnlockDialog.qml  WindowManager.qml  qml.qrc
src/qt/qml/MMPControls/: Button.qml  CheckBox.qml  ComboBox.qml  GroupBox.qml  RadioButton.qml  ScrollBar.qml  ScrollIndicator.qml  SpinBox.qml  TextArea.qml  TextField.qml
src/qt/qml/MMPTheme/: CheckBox.qml  GroupBox.qml  ScrollBar.qml  SpinBox.qml  TextArea.qml  TextField.qml  qmldir
src/qt/qml/plugins/CurrentTime/: CurrentTime.qml
src/qt/qml/plugins/MMPTheme/: MMPTheme.qml
src/qt/res/: gridcoinresearch.rc  res.qrc
src/qt/researcher/: researchermodel.cpp  researchermodel.h  researcherwizard.cpp  researcherwizard.h  researcherwizardbeaconpage.cpp  researcherwizardbeaconpage.h  researcherwizardmodedetailpage.cpp  researcherwizardmodepage.cpp  researcherwizardmodepage.h  researcherwizardnoncruncherpage.cpp  researcherwizardnoncruncherpage.h  researcherwizardownershipproofpage.cpp  researcherwizardownershipproofpage.h  researcherwizardpoolpage.cpp
src/qt/test/: CMakeLists.txt  bitcoinunitstests.cpp  bitcoinunitstests.h  test_main.cpp
src/qt/voting/: additionalfieldstablemodel.cpp  polldetails.cpp  pollresultchoiceitem.cpp  polltab.cpp  polltablemodel.cpp  polltablemodel.h  pollwizarddetailspage.cpp  votingmodel.cpp  votingmodel.h  votingpage.cpp
(+128 files in other folders)
